# napari-release-tools

./: .gitignore  .pre-commit-config.yaml  Readme.md  add_login_to_citation_cff.py  cherry_pick_process.py  docs_cherry_pick.py  env.yml  filter_opened_bug_issues.py  filter_pr_that_may_be_selected.py  find_all_undeleted_branches.py  find_contributors_without_citation.py  find_pre_commit_updates.py  generate_issue_content.sh  generate_release_notes.py  list_opened_pr.py  name_corrections.yaml  pyproject.toml  release_utils.py  requirements.in  requirements.txt  sort_citation_cff.py  test_fix_pr.txt
.github/workflows/: pre_commit.yml
additional_notes/0.4.19/: api changes.md  deprecations.md  highlights.md
additional_notes/0.5.0/: header.md  highlights.md
additional_notes/0.5.1/: header.md  highlights.md
additional_notes/0.5.2/: header.md  highlights.md
additional_notes/0.5.3/: header.md  highlights.md
additional_notes/0.5.4/: header.md  highlights.md
additional_notes/0.5.5/: header.md  highlights.md
additional_notes/0.5.6/: header.md  highlights.md
additional_notes/0.6.0/: header.md  highlights.md
additional_notes/0.6.1/: header.md  highlights.md
additional_notes/0.6.2/: header.md  highlights.md
additional_notes/0.6.3/: header.md  highlights.md
additional_notes/0.6.4/: header.md  highlights.md
additional_notes/0.6.5/: highlights.md
additional_notes/0.6.6/: highlights.md
highlight/: 0.4.19.md
patch_dir/: 5277.patch  5333.patch  5582.patch  5963.patch
patch_dir/0.4.18/: 4894.patch  (+52 more)
post_patch/: docs_106.patch  docs_149.patch  docs_181.patch
(+152 files in other folders)
