[project]
name = "napari-release-tools"
version = "0.1.0"
description = "Add your description here"
readme = "Readme.md"
requires-python = ">=3.13"
dependencies = [
    "argcomplete>=3.6.3",
    "gitpython>=3.1.46",
    "packaging>=26.1",
    "pygithub>=2.9.1",
    "pyyaml>=6.0.3",
    "requests-cache>=1.3.1",
    "tqdm>=4.67.3",
    "unidecode>=1.4.0",
]

[tool.ruff]
target-version = "py313"
fix = true

line-length = 79

[tool.ruff.lint]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "single"
